--- a/index.html
+++ b/index.html
@@ -246,6 +246,29 @@
     </div>
   </div>
 
+  <!-- VERSION BANNIÈRE (couverture Facebook 820x312) -->
+  <div style="text-align:center;">
+    <div style="font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;font-size:12px;font-weight:700;color:#64748b;letter-spacing:3px;text-transform:uppercase;margin-bottom:20px;">Version bannière (couverture Facebook)</div>
+    <div style="width:820px;height:312px;background:linear-gradient(135deg,#00d4ff 0%,#7c3aed 60%,#07070f 100%);border-radius:12px;display:flex;align-items:center;justify-content:center;gap:40px;box-shadow:0 0 80px rgba(0,212,255,0.2);position:relative;overflow:hidden;">
+      <!-- Grille déco -->
+      <div style="position:absolute;inset:0;background-image:linear-gradient(rgba(255,255,255,0.04) 1px,transparent 1px),linear-gradient(90deg,rgba(255,255,255,0.04) 1px,transparent 1px);background-size:40px 40px;"></div>
+      <!-- Icône K -->
+      <div style="flex-shrink:0;position:relative;z-index:1;">
+        <svg width="110" height="110" viewBox="0 0 64 64" fill="none">
+          <line x1="16" y1="8" x2="16" y2="56" stroke="white" stroke-width="7" stroke-linecap="round"/>
+          <line x1="16" y1="32" x2="48" y2="10" stroke="white" stroke-width="7" stroke-linecap="round"/>
+          <line x1="16" y1="32" x2="48" y2="54" stroke="white" stroke-width="7" stroke-linecap="round"/>
+          <circle cx="52" cy="10" r="5" fill="rgba(255,255,255,0.9)"/>
+        </svg>
+      </div>
+      <!-- Texte -->
+      <div style="position:relative;z-index:1;text-align:left;">
+        <div style="font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;font-size:90px;font-weight:900;letter-spacing:-2px;line-height:1;color:white;">KodAI</div>
+        <div style="font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;font-size:18px;font-weight:600;color:rgba(255,255,255,0.8);letter-spacing:4px;text-transform:uppercase;margin-top:8px;">Automatisation · Intelligence Artificielle</div>
+      </div>
+    </div>
+  </div>
+
   <button onclick="document.getElementById('logoPreview').style.display='none'" style="background:rgba(255,255,255,0.08);border:1px solid rgba(255,255,255,0.15);color:#64748b;padding:10px 24px;border-radius:99px;cursor:pointer;font-size:13px;">Fermer ✕</button>
 </div>
 
