--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   <!-- VERSION BANNIÈRE (couverture Facebook 820x312) -->
   <div style="text-align:center;">
     <div style="font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;font-size:12px;font-weight:700;color:#64748b;letter-spacing:3px;text-transform:uppercase;margin-bottom:20px;">Version bannière (couverture Facebook)</div>
-    <div style="width:820px;height:312px;background:linear-gradient(135deg,#00d4ff 0%,#7c3aed 60%,#07070f 100%);border-radius:12px;display:flex;align-items:center;justify-content:center;gap:40px;box-shadow:0 0 80px rgba(0,212,255,0.2);position:relative;overflow:hidden;">
+    <div style="width:820px;height:312px;background:linear-gradient(135deg,#00d4ff 0%,#7c3aed 60%,#07070f 100%);border-radius:12px;display:flex;align-items:flex-start;justify-content:center;gap:40px;padding-top:32px;box-shadow:0 0 80px rgba(0,212,255,0.2);position:relative;overflow:hidden;">
       <!-- Grille déco -->
       <div style="position:absolute;inset:0;background-image:linear-gradient(rgba(255,255,255,0.04) 1px,transparent 1px),linear-gradient(90deg,rgba(255,255,255,0.04) 1px,transparent 1px);background-size:40px 40px;"></div>
       <!-- Icône K -->
